Added simple collection support
